syntax = "proto3";

package project;
option go_package = "contract/goprotobuf/project";

import "google/protobuf/timestamp.proto";

message Project {
  string  id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp deleted_at = 4;
  string name = 5;
  string description = 6;
  string user_id = 7;
}
